Sync LeetCode submission - Subsets (java)